--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <h1>Javascript!</h1>
     
-<script src="../js/index.js"></script>   
+<script src="../js/index.js"></script> 
+<script src="../js/index2.js"></script>  
 </body>
 </html>
